--- a/Task4/Strategic_Bucketing_of_FICO_Scores_for_PD_Modeling.ipynb
+++ b/Task4/Strategic_Bucketing_of_FICO_Scores_for_PD_Modeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoarJN/9QrJ593ciwB3kah",
+      "authorship_tag": "ABX9TyNsG/CA01AF3cxK6W34ud26",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -852,10 +852,152 @@
     {
       "cell_type": "code",
       "source": [
-        "# Implement Automatic K (Number of Buckets) Selection"
+        "fico = df['fico_score'].values\n",
+        "default = df['default'].values\n",
+        "n = len(df)\n",
+        "\n",
+        "# Choose number of buckets\n",
+        "K = 10 # This can be change freely\n",
+        "\n",
+        "# Precompute Cumulative Statistics\n",
+        "cum_n = np.arange(1, n + 1) # Cumulative counts\n",
+        "cum_d = np.cumsum(default) # Cumulative defaults"
       ],
       "metadata": {
         "id": "ue8wSkcJ1rXV"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to return Bucket Status\n",
+        "def bucket_stats(i, j):\n",
+        "    \"\"\"\n",
+        "    Stats for bucket covering indices [i, j]\n",
+        "    \"\"\"\n",
+        "    n_ij = j - i + 1\n",
+        "    d_ij = cum_d[j] - (cum_d[i - 1] if i > 0 else 0)\n",
+        "    return n_ij, d_ij\n",
+        "\n",
+        "# Define log-likelihood bucket cost\n",
+        "def neg_log_likelihood(i, j, eps=1e-10):\n",
+        "    \"\"\"\n",
+        "    Negative log-likelihood for bucket [i, j]\n",
+        "    \"\"\"\n",
+        "    n_ij, d_ij = bucket_stats(i, j)\n",
+        "\n",
+        "    if n_ij == 0:\n",
+        "        return 0.0\n",
+        "\n",
+        "    p = d_ij / n_ij\n",
+        "    p = np.clip(p, eps, 1 - eps)\n",
+        "\n",
+        "    ll = d_ij * np.log(p) + (n_ij - d_ij) * np.log(1 - p)\n",
+        "    return -ll"
+      ],
+      "metadata": {
+        "id": "JBLfia0z7v5w"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Precompute all bucket costs (O(n²))\n",
+        "cost = np.zeros((n, n))\n",
+        "\n",
+        "for i in range(n):\n",
+        "    for j in range(i, n):\n",
+        "        cost[i, j] = neg_log_likelihood(i, j)\n",
+        "\n",
+        "# Dynamic Programming optimization\n",
+        "DP = np.full((K + 1, n), np.inf)\n",
+        "split = np.zeros((K + 1, n), dtype=int)\n",
+        "\n",
+        "# Base case: 1 bucket\n",
+        "for j in range(n):\n",
+        "    DP[1, j] = cost[0, j]\n",
+        "\n",
+        "# Fill DP table\n",
+        "for k in range(2, K + 1):\n",
+        "    for j in range(n):\n",
+        "        for i in range(k - 1, j + 1):\n",
+        "            val = DP[k - 1, i - 1] + cost[i, j]\n",
+        "            if val < DP[k, j]:\n",
+        "                DP[k, j] = val\n",
+        "                split[k, j] = i\n",
+        "\n",
+        "# Recover optimal bucket boundaries\n",
+        "boundaries = []\n",
+        "j = n - 1\n",
+        "\n",
+        "for k in range(K, 0, -1):\n",
+        "    i = split[k, j]\n",
+        "    boundaries.append((i, j))\n",
+        "    j = i - 1\n",
+        "\n",
+        "boundaries.reverse()\n",
+        "\n",
+        "# Convert boundaries to FICO score cutoffs\n",
+        "fico_boundaries = []\n",
+        "\n",
+        "for (i, j) in boundaries:\n",
+        "    fico_min = fico[i]\n",
+        "    fico_max = fico[j]\n",
+        "    fico_boundaries.append((fico_min, fico_max))\n",
+        "\n",
+        "\n",
+        "# Compute per-bucket PDs\n",
+        "bucket_summary = []\n",
+        "\n",
+        "for rating, (i, j) in enumerate(boundaries, start=1):\n",
+        "    n_ij, d_ij = bucket_stats(i, j)\n",
+        "    pd = d_ij / n_ij if n_ij > 0 else 0\n",
+        "\n",
+        "    bucket_summary.append({\n",
+        "        \"rating\": rating,\n",
+        "        \"fico_min\": fico[i],\n",
+        "        \"fico_max\": fico[j],\n",
+        "        \"count\": n_ij,\n",
+        "        \"defaults\": d_ij,\n",
+        "        \"pd\": pd\n",
+        "    })\n",
+        "\n",
+        "bucket_df = pd.DataFrame(bucket_summary)\n",
+        "print(bucket_df)"
+      ],
+      "metadata": {
+        "id": "LYWUQgEA8jnK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Create rating map function (for future data)**"
+      ],
+      "metadata": {
+        "id": "DI8X5ZbZ-fwU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def map_fico_to_rating(fico_score, bucket_df):\n",
+        "    for _, row in bucket_df.iterrows():\n",
+        "        if row['fico_min'] <= fico_score <= row['fico_max']:\n",
+        "            return row['rating']\n",
+        "    return bucket_df['rating'].max()\n",
+        "\n",
+        "\n",
+        "df['rating'] = df['fico_score'].apply(lambda x: map_fico_to_rating(x, bucket_df))"
+      ],
+      "metadata": {
+        "id": "LSxl_BlA-cQb"
       },
       "execution_count": null,
       "outputs": []
