--- a/Task1/Natural_Gas_Price_Forecasting.ipynb
+++ b/Task1/Natural_Gas_Price_Forecasting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYPyGW8Q6qxll6y2qc/TmI",
+      "authorship_tag": "ABX9TyOXnSiJh1rktUzK5KQdoaWz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1095,7 +1095,7 @@
         "print(SARIMA_forecast_df[['mean']].head(12))\n",
         "\n",
         "# Save SARIMA forcast values in a csv file\n",
-        "SARIMA_forecast_df[['mean']].head(12).to_csv('SARIMA_forecast.csv')\n"
+        "SARIMA_forecast_df[['mean']].head(12).to_csv('SARIMA_forecast.csv')"
       ],
       "metadata": {
         "colab": {
@@ -1154,12 +1154,7 @@
       "cell_type": "code",
       "source": [
         "# Fit ETS Model\n",
-        "ETS_model = ETSModel(df_month['Prices'],\n",
-        "                     error='add',\n",
-        "                     trend='add',\n",
-        "                     seasonal='mul',\n",
-        "                     seasonal_periods=12\n",
-        "                     )\n",
+        "ETS_model = ETSModel(df_month['Prices'], error='add', trend='add', seasonal='mul', seasonal_periods=12)\n",
         "ETS_result = ETS_model.fit()\n",
         "\n",
         "# ETS Model forecast\n",
@@ -1236,8 +1231,8 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "metadata": {
         "id": "PxKXqdVo8TTk"
